src/yini_test/cases/golden/strict/valid/numbers/octal-numbers.strict.yini
@yini strict

^ Numbers
fileMode = 0o755
umask = 0o022

/END
