src/yini_test/cases/golden/strict/invalid/numbers/malformed-underscore-trailing.strict.yini
@yini strict

^ Numbers
val = 123_

/END

